# open-set-da

./: InputParameters.m  LICENSE  README.md  Run_DA.m  main.m
classifiers/SVM/: scoreSVM.m
classifiers/SVM/libsvm-openset/libMR/: CMakeLists.txt  MR.lib  MetaRecognition.cpp  MetaRecognition.h  config.h.in  weibull.c
classifiers/clustering/: KMeans_Mahalanobis.m  clusterSamples.m  mexKMeans.cpp  mexKMeans.mexw64
classifiers/kNN/: transferKNN.m
da/: DA.m  DA_ATI.m  DA_transScale.m  clusterSrcData.m  clusterTgtData.m  computeCorrespondences.m
da/min/: directSolutionSystemLinearEquations.m
da/tools/: assignmentProblem.m  assignmentProblem_NN_BP.m  assignmentProblem_NN_MILP.m  estimateLESQ.m  estimateW.m  fsvd.m  getAbFromCorrespondences.m  getNN.m  kPCA.m  mPCA.m  medianDist.m  solveScale.m  solveTransScale.m  solveTranslation.m  zscore.m
datasets/: defineData.m  getData.m  getDataClass.m  getDiscreteAzimuths.m  setupData.m
datasets/syn/: CVC.m  ShapeNet.m  Synthetic.m  getShapeNet.m  (+2 more)
features/: cropBB.m  getFeatures.m  getImgNegativeSamples.m  getImgSamples.m  grey2rgb.m  imgCrop.m  setupFeatures.m
io/: angleError.m  angleErrorGT.m  comparisonVideo.m  confusionMatrix.m  createDir.m  drawAzimuthResults.m  drawConfusionMatrix.m  getResultsPath.m  leaveMatlab.m  meanStd.m  nameTransferLabel.m  removeDir.m  saveImagesDetection.m  saveImagesLabelTransfer.m  saveLabelTransfer.m  savePrecisionRecall.m  saveVideoDetection.m
step_classification/: assignLabels.m  getAzimuthId.m  getClassId.m  getIdLabels.m  retrieveId.m  step_Classification.m  trainLabels.m
(+210 files in other folders)
